packages/dart_pty_macos/lib/src/native_backend.dart

import 'dart:async';
import 'dart:ffi';
import 'dart:io';
import 'dart:typed_data';

import 'package:ffi/ffi.dart';

import 'api.dart';

const String _assetId = 'package:dart_pty_macos/dart_pty_macos.dart';
const int _abiVersion = 2;
const int _statusOk = 0;
const int _statusBackpressured = 4;
const int _eventStarted = 1;
const int _eventOutput = 2;
const int _eventExit = 3;
const int _eventError = 4;

typedef _EventNative = Void Function(
  Uint64,
  Uint32,
  Uint64,
  Pointer<Uint8>,
  Size,
  Int64,
  Int64,
  Int32,
  Pointer<Void>,
);

final class _SessionConfig extends Struct {
  @Size()
  external int structSize;

  @Uint32()
  external int abiVersion;

  external Pointer<Utf8> executable;
  external Pointer<Pointer<Utf8>> arguments;

  @Size()
  external int argumentCount;

  external Pointer<Pointer<Utf8>> environment;

  @Size()
  external int environmentCount;

  external Pointer<Utf8> workingDirectory;

  @Uint16()
  external int initialRows;

  @Uint16()
  external int initialColumns;

  @Size()
  external int readHighWaterBytes;

  @Size()
  external int readLowWaterBytes;

  @Size()
  external int writeCapacityBytes;

  external Pointer<NativeFunction<_EventNative>> callback;
  external Pointer<Void> callbackContext;
}

final class _NativeStats extends Struct {
  @Size()
  external int structSize;

  @Uint32()
  external int abiVersion;

  @Uint64()
  external int bytesRead;

  @Uint64()
  external int bytesWritten;

  @Uint64()
  external int readBatches;

  @Uint64()
  external int writeBackpressureRejections;

  @Uint64()
  external int maxReadInFlightBytes;

  @Uint64()
  external int maxWriteQueuedBytes;

  @Uint64()
  external int readPauseCount;

  @Int64()
  external int childPid;

  @Int32()
  external int hasExited;
}

@Native<Uint32 Function()>(symbol: 'dpty_abi_version', assetId: _assetId)
external int _nativeAbiVersion();

@Native<Int32 Function(Pointer<_SessionConfig>, Pointer<Uint64>)>(
  symbol: 'dpty_session_create',
  assetId: _assetId,
)
external int _sessionCreate(
  Pointer<_SessionConfig> config,
  Pointer<Uint64> output,
);

@Native<Int32 Function(Uint64)>(symbol: 'dpty_session_start', assetId: _assetId)
external int _sessionStart(int session);

@Native<Int32 Function(Uint64, Pointer<Uint8>, Size)>(
  symbol: 'dpty_session_write',
  assetId: _assetId,
)
external int _sessionWrite(int session, Pointer<Uint8> bytes, int length);

@Native<Int32 Function(Uint64, Uint64, Size)>(
  symbol: 'dpty_session_ack_output',
  assetId: _assetId,
)
external int _sessionAckOutput(int session, int sequence, int length);

@Native<Int32 Function(Uint64, Uint16, Uint16)>(
  symbol: 'dpty_session_resize',
  assetId: _assetId,
)
external int _sessionResize(int session, int rows, int columns);

@Native<Int32 Function(Uint64, Uint32)>(
  symbol: 'dpty_session_send_signal',
  assetId: _assetId,
)
external int _sessionSendSignal(int session, int signal);

@Native<Int32 Function(Uint64, Uint32)>(
  symbol: 'dpty_session_close',
  assetId: _assetId,
)
external int _sessionClose(int session, int gracePeriodMillis);

@Native<Int32 Function(Uint64)>(
  symbol: 'dpty_session_force_close',
  assetId: _assetId,
)
external int _sessionForceClose(int session);

@Native<Int32 Function(Uint64, Pointer<_NativeStats>)>(
  symbol: 'dpty_session_get_stats',
  assetId: _assetId,
)
external int _sessionGetStats(int session, Pointer<_NativeStats> stats);

@Native<Int32 Function(Uint64)>(
  symbol: 'dpty_session_destroy',
  assetId: _assetId,
)
external int _sessionDestroy(int session);

typedef _AbiVersionNative = Uint32 Function();
typedef _AbiVersionDart = int Function();
typedef _SessionCreateNative = Int32 Function(
  Pointer<_SessionConfig>,
  Pointer<Uint64>,
);
typedef _SessionCreateDart = int Function(
  Pointer<_SessionConfig>,
  Pointer<Uint64>,
);
typedef _SessionHandleNative = Int32 Function(Uint64);
typedef _SessionHandleDart = int Function(int);
typedef _SessionWriteNative = Int32 Function(Uint64, Pointer<Uint8>, Size);
typedef _SessionWriteDart = int Function(int, Pointer<Uint8>, int);
typedef _SessionAckNative = Int32 Function(Uint64, Uint64, Size);
typedef _SessionAckDart = int Function(int, int, int);
typedef _SessionResizeNative = Int32 Function(Uint64, Uint16, Uint16);
typedef _SessionResizeDart = int Function(int, int, int);
typedef _SessionUint32Native = Int32 Function(Uint64, Uint32);
typedef _SessionUint32Dart = int Function(int, int);
typedef _SessionStatsNative = Int32 Function(Uint64, Pointer<_NativeStats>);
typedef _SessionStatsDart = int Function(int, Pointer<_NativeStats>);

final class _PtyFunctions {
  _PtyFunctions.nativeAssets()
    : abiVersion = _nativeAbiVersion,
      sessionCreate = _sessionCreate,
      sessionStart = _sessionStart,
      sessionWrite = _sessionWrite,
      sessionAckOutput = _sessionAckOutput,
      sessionResize = _sessionResize,
      sessionSendSignal = _sessionSendSignal,
      sessionClose = _sessionClose,
      sessionForceClose = _sessionForceClose,
      sessionGetStats = _sessionGetStats,
      sessionDestroy = _sessionDestroy;

  _PtyFunctions.dynamic(DynamicLibrary library)
    : abiVersion = library.lookupFunction<_AbiVersionNative, _AbiVersionDart>(
        'dpty_abi_version',
      ),
      sessionCreate = library
          .lookupFunction<_SessionCreateNative, _SessionCreateDart>(
            'dpty_session_create',
          ),
      sessionStart = library
          .lookupFunction<_SessionHandleNative, _SessionHandleDart>(
            'dpty_session_start',
          ),
      sessionWrite = library
          .lookupFunction<_SessionWriteNative, _SessionWriteDart>(
            'dpty_session_write',
          ),
      sessionAckOutput = library
          .lookupFunction<_SessionAckNative, _SessionAckDart>(
            'dpty_session_ack_output',
          ),
      sessionResize = library
          .lookupFunction<_SessionResizeNative, _SessionResizeDart>(
            'dpty_session_resize',
          ),
      sessionSendSignal = library
          .lookupFunction<_SessionUint32Native, _SessionUint32Dart>(
            'dpty_session_send_signal',
          ),
      sessionClose = library
          .lookupFunction<_SessionUint32Native, _SessionUint32Dart>(
            'dpty_session_close',
          ),
      sessionForceClose = library
          .lookupFunction<_SessionHandleNative, _SessionHandleDart>(
            'dpty_session_force_close',
          ),
      sessionGetStats = library
          .lookupFunction<_SessionStatsNative, _SessionStatsDart>(
            'dpty_session_get_stats',
          ),
      sessionDestroy = library
          .lookupFunction<_SessionHandleNative, _SessionHandleDart>(
            'dpty_session_destroy',
          );

  final _AbiVersionDart abiVersion;
  final _SessionCreateDart sessionCreate;
  final _SessionHandleDart sessionStart;
  final _SessionWriteDart sessionWrite;
  final _SessionAckDart sessionAckOutput;
  final _SessionResizeDart sessionResize;
  final _SessionUint32Dart sessionSendSignal;
  final _SessionUint32Dart sessionClose;
  final _SessionHandleDart sessionForceClose;
  final _SessionStatsDart sessionGetStats;
  final _SessionHandleDart sessionDestroy;
}

final Map<int, _MacosPtyProcess> _sessions = <int, _MacosPtyProcess>{};
final NativeCallable<_EventNative> _eventCallback =
    NativeCallable<_EventNative>.listener(_dispatchEvent)
      ..keepIsolateAlive = false;

void _refreshCallbackKeepAlive() {
  _eventCallback.keepIsolateAlive = _sessions.isNotEmpty;
}

void _dispatchEvent(
  int session,
  int eventType,
  int sequence,
  Pointer<Uint8> data,
  int length,
  int value1,
  int value2,
  int systemError,
  Pointer<Void> _,
) {
  final _MacosPtyProcess? process = _sessions[session];
  if (process == null) {
    return;
  }
  switch (eventType) {
    case _eventStarted:
      process._didStart(value1);
      return;
    case _eventOutput:
      if (data == nullptr || length <= 0) {
        process._didFail(
          const PtyException('native PTY returned an invalid output event'),
        );
        return;
      }
      final Uint8List bytes = Uint8List.fromList(data.asTypedList(length));
      process._didOutput(sequence, bytes);
      return;
    case _eventExit:
      process._didExit(value1, value2);
      return;
    case _eventError:
      process._didFail(
        PtyException(
          'native PTY reactor failed',
          status: value1,
          systemError: systemError,
        ),
      );
      return;
    default:
      process._didFail(
        PtyException('native PTY returned unknown event $eventType'),
      );
      return;
  }
}

Future<PtyProcess> startPty(
  PtyCommand command, {
  PtyBackend? backend,
  PtySize initialSize = const PtySize(rows: 24, columns: 80),
  int readHighWaterBytes = 1024 * 1024,
  int readLowWaterBytes = 512 * 1024,
  int writeCapacityBytes = 1024 * 1024,
}) {
  final PtyBackend selected = backend ?? MacosPtyBackend.shared;
  return selected.start(
    command,
    initialSize: initialSize,
    readHighWaterBytes: readHighWaterBytes,
    readLowWaterBytes: readLowWaterBytes,
    writeCapacityBytes: writeCapacityBytes,
  );
}

final class MacosPtyBackend implements PtyBackend {
  MacosPtyBackend._(this._functions);

  static final MacosPtyBackend shared = MacosPtyBackend._(
    _PtyFunctions.nativeAssets(),
  );

  factory MacosPtyBackend.open(String libraryPath) {
    final File library = File(libraryPath);
    if (!library.isAbsolute || !library.existsSync()) {
      throw ArgumentError.value(
        libraryPath,
        'libraryPath',
        'must name an existing absolute dylib path',
      );
    }
    return MacosPtyBackend._(
      _PtyFunctions.dynamic(DynamicLibrary.open(library.path)),
    );
  }

  final _PtyFunctions _functions;

  @override
  Future<PtyProcess> start(
    PtyCommand command, {
    PtySize initialSize = const PtySize(rows: 24, columns: 80),
    int readHighWaterBytes = 1024 * 1024,
    int readLowWaterBytes = 512 * 1024,
    int writeCapacityBytes = 1024 * 1024,
  }) async {
    if (!Platform.isMacOS) {
      throw UnsupportedError('dart_pty_macos requires macOS');
    }
    if (_functions.abiVersion() != _abiVersion) {
      throw const PtyException('native PTY ABI version mismatch');
    }
    if (readHighWaterBytes <= 0 ||
        readLowWaterBytes < 0 ||
        readLowWaterBytes >= readHighWaterBytes ||
        writeCapacityBytes <= 0) {
      throw ArgumentError('PTY queue watermarks are invalid');
    }
